--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "get-image-colors",
-  "version": "1.6.1",
+  "version": "1.6.4",
   "description": "Extract colors from images. Supports GIF, JPG, PNG, and even SVG!",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -25,17 +25,16 @@
   "author": "zeke",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zeke/get-image-colors/issues"
+    "url": "https://github.com/matedon/get-image-colors/issues"
   },
-  "homepage": "https://github.com/zeke/get-image-colors#readme",
+  "homepage": "https://github.com/matedon/get-image-colors#readme",
   "devDependencies": {
-    "mocha": "^2.3.3"
+    "mocha": "^3.0.2"
   },
   "dependencies": {
-    "chroma-js": "^1.1.1",
+    "chroma-js": "^1.2.1",
     "get-pixels": "^3.3.0",
     "get-rgba-palette": "^2.0.0",
-    "get-svg-colors": "^1.3.0",
-    "tmp": "0.0.28"
+    "get-svg-colors": "^1.3.0"
   }
 }
