--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "get-image-colors",
-  "version": "1.6.4",
+  "version": "1.6.6",
   "description": "Extract colors from images. Supports GIF, JPG, PNG, and even SVG!",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha"
+    "test": "node ./node_modules/mocha/bin/mocha -R spec"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "chroma-js": "^1.2.1",
     "get-pixels": "^3.3.0",
     "get-rgba-palette": "^2.0.0",
-    "get-svg-colors": "^1.3.0"
+    "get-svg-colors": "^1.3.0",
+    "lodash": "^4.15.0"
   }
 }
