--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get-image-colors",
+  "name": "image2colors",
   "version": "1.6.6",
   "description": "Extract colors from images. Supports GIF, JPG, PNG, and even SVG!",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zeke/get-image-colors.git"
+    "url": "git+https://github.com/matedon/image2colors.git"
   },
   "keywords": [
     "color",
@@ -25,9 +25,9 @@
   "author": "zeke",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/matedon/get-image-colors/issues"
+    "url": "https://github.com/matedon/image2colors/issues"
   },
-  "homepage": "https://github.com/matedon/get-image-colors#readme",
+  "homepage": "https://github.com/matedon/image2colors#readme",
   "devDependencies": {
     "mocha": "^3.0.2"
   },
