--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "chroma-js": "^1.2.1",
     "get-pixels": "^3.3.0",
     "get-rgba-palette": "^2.0.0",
-    "get-svg-colors": "^1.3.0",
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "svg2colors": "^1.4.0"
   }
 }
