update author field

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "rgb",
     "rgba"
   ],
-  "author": "zeke",
+  "author": "matedon",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/matedon/image2colors/issues"
