--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chroma-js": "^1.2.1",
     "color2library": "^1.0.8",
     "get-pixels": "^3.3.0",
+    "image-type": "^2.1.0",
     "lodash": "^4.15.0",
     "svg2colors": "^1.4.0"
   }
